--- a/index.html
+++ b/index.html
@@ -8,31 +8,28 @@
   <title>Drawflow</title>
 </head>
 
-<body>
-  <script src="drawflow.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
-    integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
+<body>  
   <link rel="stylesheet" type="text/css" href="src/drawflow.css" />
   <link rel="stylesheet" type="text/css" href="docs/beautiful.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-  <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
-
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
 
   <header>
-    <h2>Drawflow</h2>
-    <div class="github-link"><a href="https://github.com/jerosoler/Drawflow" target="_blank"><i
-          class="fab fa-github fa-3x"></i></a></div>
+    <h2>ProAV Route Configurator</h2>
+    <div class="github-link"><a href="https://www.proav.com"><i
+          class="fas fa-route fa-3x"></i></a></div>
   </header>
   <div class="wrapper">
-    <div id="drawflow" ondrop="drop(event)" ondragover="allowDrop(event)">
+    <div id="drawflow">
       <div class="btn-add" onclick="openAddNodeMenu()">Add</div>
 
       <div id="add-node-menu">
         <label for="nodeName">Node Name:</label>
-        <input type="text" id="nodeName" name="nodeName" required><br>
+        <input type="text" id="newNodeName" name="nodeName" required><br>
+
+        <label for="nodeId">Id:</label>
+        <input type="text" id="newNodeId" name="nodeId" required><br>
 
         <label for="inputs">Inputs:</label>
         <select id="addnodemenuinputs" name="inputs">
@@ -61,300 +58,14 @@
         <i class="fas fa-search-plus" onclick="editor.zoom_in()"></i>
       </div>
     </div>
-    <!-- <div class="col">
-      <div class="drag-drawflow" draggable="true" ondragstart="drag(event)" data-node="videomatrix">
-        <span>Video Matrix</span>
-      </div>
-      <div class="drag-drawflow" draggable="true" ondragstart="drag(event)" data-node="projector">
-        <span>Projector</span>
-      </div>
-      <div class="drag-drawflow" draggable="true" ondragstart="drag(event)" data-node="audiomatrix">
-        <span>Audio Matrix</span>
-      </div>
-
-    </div> -->
-    <div class="col-right">
-      <!-- <div class="menu">
-        <ul>
-          <li onclick="editor.changeModule('Home'); changeModule(event);" class="selected">Home</li>
-          <li onclick="editor.changeModule('Other'); changeModule(event);">Other Module</li>
-        </ul>
-      </div> -->
-
-    </div>
   </div>
 
-  <script>
-
-    var id = document.getElementById("drawflow");
-    const editor = new Drawflow(id);
-    editor.reroute = true;
-    editor.reroute_fix_curvature = true;
-    editor.force_first_input = false;
-    var currentNodeId = 0;
-    editor.start();
-
-    // Events!
-    editor.on('nodeCreated', function (id) {
-      console.log("Node created " + id);
-    })
-
-    editor.on('nodeRemoved', function (id) {
-      console.log("Node removed " + id);
-    })
-
-    editor.on('nodeSelected', function (id) {
-      console.log("Node selected " + id);
-      currentNodeId = id;
-    })
-
-    editor.on('moduleCreated', function (name) {
-      console.log("Module Created " + name);
-    })
-
-    editor.on('moduleChanged', function (name) {
-      console.log("Module Changed " + name);
-    })
-
-    editor.on('connectionCreated', function (connection) {
-      console.log('Connection created');
-      console.log(connection);
-    })
-
-    editor.on('connectionRemoved', function (connection) {
-      console.log('Connection removed');
-      console.log(connection);
-    })
-    /*
-        editor.on('mouseMove', function(position) {
-          console.log('Position mouse x:' + position.x + ' y:'+ position.y);
-        })
-    */
-    editor.on('nodeMoved', function (id) {
-      console.log("Node moved " + id);
-    })
-
-    editor.on('zoom', function (zoom) {
-      console.log('Zoom level ' + zoom);
-    })
-
-    editor.on('translate', function (position) {
-      console.log('Translate x:' + position.x + ' y:' + position.y);
-    })
-
-    editor.on('addReroute', function (id) {
-      console.log("Reroute added " + id);
-    })
-
-    editor.on('removeReroute', function (id) {
-      console.log("Reroute removed " + id);
-    })
-    /* DRAG EVENT */
-
-    /* Mouse and Touch Actions */
-
-    var elements = document.getElementsByClassName('drag-drawflow');
-    for (var i = 0; i < elements.length; i++) {
-      elements[i].addEventListener('touchend', drop, false);
-      elements[i].addEventListener('touchmove', positionMobile, false);
-      elements[i].addEventListener('touchstart', drag, false);
-    }
-
-    var addNodeMenuInputsDropdown = document.getElementById("addnodemenuinputs");
-    for (var i = 1; i <= 100; i++) {
-      var option = document.createElement("option");
-      option.value = i;
-      option.text = i;
-      addNodeMenuInputsDropdown.add(option);
-    }
-
-    var addNodeMenuOutputsDropdown = document.getElementById("addnodemenuoutputs");
-    for (var i = 1; i <= 100; i++) {
-      var option = document.createElement("option");
-      option.value = i;
-      option.text = i;
-      addNodeMenuOutputsDropdown.add(option);
-    }
-
-    var mobile_item_selec = '';
-    var mobile_last_move = null;
-    function positionMobile(ev) {
-      mobile_last_move = ev;
-    }
-
-    function allowDrop(ev) {
-      ev.preventDefault();
-    }
-
-    function drag(ev) {
-      if (ev.type === "touchstart") {
-        mobile_item_selec = ev.target.closest(".drag-drawflow").getAttribute('data-node');
-      } else {
-        ev.dataTransfer.setData("node", ev.target.getAttribute('data-node'));
-      }
-    }
-
-    function drop(ev) {
-      if (ev.type === "touchend") {
-        var parentdrawflow = document.elementFromPoint(mobile_last_move.touches[0].clientX, mobile_last_move.touches[0].clientY).closest("#drawflow");
-        if (parentdrawflow != null) {
-          addNodeToDrawFlow(mobile_item_selec, mobile_last_move.touches[0].clientX, mobile_last_move.touches[0].clientY);
-        }
-        mobile_item_selec = '';
-      } else {
-        ev.preventDefault();
-        var data = ev.dataTransfer.getData("node");
-        addNodeToDrawFlow(data, ev.clientX, ev.clientY);
-      }
-
-    }
-
-    function openAddNodeMenu() {
-      document.getElementById('add-node-menu').style.display = 'block';
-    }
-
-    // Function to close the popup
-    function closeAddNodeMenu() {
-      document.getElementById('add-node-menu').style.display = 'none';
-    }
-
-    function createNode() {
-      closeAddNodeMenu();
-      //addNodeToDrawFlow(name, 100, 100)
-    }
-
-    function addNodeToDrawFlow(name, pos_x, pos_y) {
-      if (editor.editor_mode === 'fixed') {
-        return false;
-      }
-      pos_x = pos_x * (editor.precanvas.clientWidth / (editor.precanvas.clientWidth * editor.zoom)) - (editor.precanvas.getBoundingClientRect().x * (editor.precanvas.clientWidth / (editor.precanvas.clientWidth * editor.zoom)));
-      pos_y = pos_y * (editor.precanvas.clientHeight / (editor.precanvas.clientHeight * editor.zoom)) - (editor.precanvas.getBoundingClientRect().y * (editor.precanvas.clientHeight / (editor.precanvas.clientHeight * editor.zoom)));
-
-
-      switch (name) {
-        case 'videomatrix':
-          var videomatrix = `
-        <div>
-          <div class="title-box"><i class="fab fa-facebook"></i> Facebook Message</div>
-        </div>
-        `;
-          editor.addNode('videomatrix', 0, 1, pos_x, pos_y, 'videomatrix', {}, videomatrix);
-          break;
-        case 'projector':
-          var projector = `
-          <div>
-            <div class="title-box"><i class="fab fa-slack"></i> Slack chat message</div>
-          </div>
-          `
-          editor.addNode('projector', 1, 0, pos_x, pos_y, 'projector', {}, projector);
-          break;
-        case 'audiomatrix':
-          var audiomatrix = `
-          <div>
-            <div class="title-box">Audio Matrix</div>
-            <div class="box">
-              <p>Inputs</p>
-              <select df-channel id="audioMatrixInputs" onchange="setInputs()">
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-              </select>
-            </div>
-            <div class="box">
-              <p>Outputs</p>
-              <select df-channel id="audioMatrixOutputs" onchange="setOutputs()">
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-              </select>
-            </div>
-          </div>
-          `;
-          editor.addNode('audiomatrix', 0, 0, pos_x, pos_y, 'audiomatrix', {}, audiomatrix);
-          break;
-        default:
-      }
-    }
-
-    var transform = '';
-    function showpopup(e) {
-      e.target.closest(".drawflow-node").style.zIndex = "9999";
-      e.target.children[0].style.display = "block";
-      //document.getElementById("modalfix").style.display = "block";
-
-      //e.target.children[0].style.transform = 'translate('+translate.x+'px, '+translate.y+'px)';
-      transform = editor.precanvas.style.transform;
-      editor.precanvas.style.transform = '';
-      editor.precanvas.style.left = editor.canvas_x + 'px';
-      editor.precanvas.style.top = editor.canvas_y + 'px';
-      console.log(transform);
-
-      //e.target.children[0].style.top  =  -editor.canvas_y - editor.container.offsetTop +'px';
-      //e.target.children[0].style.left  =  -editor.canvas_x  - editor.container.offsetLeft +'px';
-      editor.editor_mode = "fixed";
-
-    }
-
-    function closemodal(e) {
-      e.target.closest(".drawflow-node").style.zIndex = "2";
-      e.target.parentElement.parentElement.style.display = "none";
-      //document.getElementById("modalfix").style.display = "none";
-      editor.precanvas.style.transform = transform;
-      editor.precanvas.style.left = '0px';
-      editor.precanvas.style.top = '0px';
-      editor.editor_mode = "edit";
-    }
-
-    function setInputs(e) {
-      var node = editor.getNodeFromId(currentNodeId.toString());
-
-      removeAllInputs(node);
-
-      var numNewInputs = parseInt(document.getElementById("audioMatrixInputs").value);
-      addInputs(numNewInputs);
-    }
-
-    function addInputs(numInputs) {
-      console.log("Adding " + numInputs + " inputs to Audio Matrix ID" + currentNodeId.toString());
-      for (var i = 1; i <= numInputs; i++) {
-        editor.addNodeInput(currentNodeId.toString());
-      }
-    }
-
-    function removeAllInputs(node) {
-      var numOldInputs = Object.keys(node.inputs).length;
-
-      for (let i = numOldInputs; i >= 1; i--) {
-        editor.removeNodeInput(currentNodeId.toString(), 'input_' + i);
-      }
-    }
-
-    function changeModule(event) {
-      var all = document.querySelectorAll(".menu ul li");
-      for (var i = 0; i < all.length; i++) {
-        all[i].classList.remove('selected');
-      }
-      event.target.classList.add('selected');
-    }
-
-    function changeMode(option) {
-
-      //console.log(lock.id);
-      if (option == 'lock') {
-        lock.style.display = 'none';
-        unlock.style.display = 'block';
-      } else {
-        lock.style.display = 'block';
-        unlock.style.display = 'none';
-      }
-
-    }
-
-  </script>
+  <script src="drawflow.min.js"></script>
+  <script src="drawflow-custom.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
+    integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+  <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
 </body>
 
 </html>
